1. framer-motion 적용 2. projects 상세페이지 내 다른 프로젝트로 변경 적용

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,10 @@
 body {
     background-color: #6096B4;   
 }
+::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(to right bottom, #6096B4, #EEE9DA);
+}
+::-webkit-scrollbar {
+    width: 8px;
+    height: 0px;
+}
