--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+.dark {
+    width: 100%;
+    background-color: black;
+    color: white;
+ }
+ .light {
+    width: 100%;
+    /* background-color: #6096B4;    */
+    background: linear-gradient(90deg,#6096B4 0%, #EEE9DA 100%);
+    color: black;
+ }
+::-webkit-scrollbar-thumb {
+   background-image: linear-gradient(to right bottom, #6096B4, #EEE9DA);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::-webkit-scrollbar {
+   width: 8px;
+   height: 0px;
 }
